immich/ingress-immich.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-immich
  namespace: immich
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP" # Change to HTTPS if required
spec:
  ingressClassName: nginx
  rules:
  - host: immich.domain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: immich-server
            port:
              number: 3001
  tls:
  - hosts:
    - immich.domain.com
    secretName: immich-tls
